# submake

./: Makefile  README.md  submake.cabal
src/: Main.hs
src/Control/Monad/: Extra.hs
src/Data/List/: Extra.hs
src/Submake/: Cooker.hs  Git.hs  Parser.hs  Types.hs
src/System/IO/: Extra.hs
src/System/IO/Error/: Extra.hs
src/System/Process/: Extra.hs
tests/: README.md
tests/cached-step/: README.md
tests/cached-step/expected/: submakefile  submakefile.cache
tests/cached-step/in/: submakefile.cache
tests/cp/: README.md
tests/cp/in/: submakefile
tests/empty-submakefile/expected/: README.md
tests/multi-step/: README.md
tests/multi-step/in/: submakefile
tests/no-submakefile/expected/: README.md  submake.err
tests/single-step/: README.md
tests/single-step/expected/: submakefile  submakefile.cache
