Name:                submake
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            Use git to replay part of a bash pipeline.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/gelisam/submake#readme
License:             PublicDomain
License-file:        LICENSE
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com

Category:            Development

Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:  README.md,
                     Makefile

executable submake
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  base >= 4 && < 5
